@@ -1,5 +1,6 @@
 Changelog for HLint
 
+    Fix bug, ''Name decided TemplateHaskell was unnecessary
     HPC statistics, and increase in test coverage
     Fix bug, import A as Y; import A gave import A, missing the as Y
     Fix bug, type Foo a = Bar a a incorrectly suggested eta reduce
